--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							<span class='percent'>70</span>
 							<canvas height="152" width="152"></canvas>
 						</span>
-						<h4>CSS</h4>
+						<h4>CSS3</h4>
 						<p>Feeling already quite confident</p>
 					</div>
 
