--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 				<div class='col-md-7'>
 					<h4>Hello there! My name is Kristina.</h4>
 					<p>Let me tell you a little story, how I found my way to web development.</p>
-					<p>I have always liked math and science, which is why after graduating high school, I chose Tallinn University of Technology. I went to study telecommunication. It was an interesting field, but by the time I finished my master studies, I was longing for something different. As I’ve always found design interesting I went to Estonian Academy of Arts to study graphic design as a part-time student. After graduating EKA I understood that design is fun, but pure graphic design might still not be what I’m looking for. By that time I had left my job in a telecom company to stay at home with my firstborn. Time away gave me  a chance to think about what I would really like to do with my life.</p>
+					<p>I have always liked math and science, which is why after graduating high school, I chose Tallinn University of Technology. I went to study telecommunication. It was an interesting field, but by the time I finished my master studies, I was longing for something different. As I’ve always found design interesting I went to Estonian Academy of Arts to study graphic design as a part-time student. After graduating EKA I understood that design is fun, but pure graphic design might still not be what I’m looking for. By that time I had left my job in a telecom company to stay at home with my firstborn. Time away gave me a chance to think about what I would really like to do with my life.</p>
 					<p>My decision was to take a new path in my career. As pure graphic design was just too “art” for me and I have always liked technology, I gradually found my way to web development. While being at home, I started to discover it on my own. It fascinated me right away. A perfect mix of IT and design. But I understood it's a complicated field with tough competition and I hadn’t actually studied any coding. So I started to seek opportunities to educate myself with that ambition in mind. Then I found <a id='aboutLink' href="http://vali-it.ee/" target="_blank">Vali-IT! course</a> and jumped at the opportunity. As I was waiting my turn to join the course I took different online courses for web design. I started by studying the basics of web design, HTML and CSS while also touching some Javascript and different frameworks. 
-					Besides that, I have an interest in UX/UI design. I have also taken some online courses and read a few books on UX and for the last two years I attended WUD Tallinn, which has been a really great experience.</p>
-					<p>From Vali-IT! course I hope to get a deeper knowledge on writing code and add C# and.NET to my knowledge base.</p>
+					Besides that, I have an interest in UX/UI design. I have also taken some online courses and read a few books on UX and for a few years I have attended WUD Tallinn, which has been a really great experience.</p>
+					<p>I graduated Vali-IT! course successfully and landed myself an internship in a great place called Pipedrive. I guess they liked me as after following PD internship they offered me a position as Junior Front End Developer. I’ve been learning and taking on new challenges and growing each day. It’s been an awesome ride!</p>
 				</div>
 				<div class='col-md-5'>
 					<img class='aboutImage' src="img/me2.jpg">
@@ -109,17 +109,8 @@
 							<span class='percent'>70</span>
 							<canvas height="152" width="152"></canvas>
 						</span>
-						<h4>HTML5</h4>
-						<p>Feeling already quite confident</p>
-					</div>
-
-					<div class='skill'>
-						<span class='chart' data-percent="70">
-							<span class='percent'>70</span>
-							<canvas height="152" width="152"></canvas>
-						</span>
-						<h4>CSS3</h4>
-						<p>Feeling already quite confident</p>
+						<h4>React.js</h4>
+						<p>Feeling quite confident</p>
 					</div>
 
 					<div class='skill'>
@@ -127,26 +118,8 @@
 							<span class='percent'>60</span>
 							<canvas height="152" width="152"></canvas>
 						</span>
-						<h4>Bootstrap</h4>
-						<p>It's coming</p>
-					</div>
-
-					<div class='skill'>
-						<span class='chart' data-percent="40">
-							<span class='percent'>40</span>
-							<canvas height="152" width="152"></canvas>
-						</span>
-						<h4>JavaScript</h4>
-						<p>Basic knowledge</p>
-					</div>
-
-					<div class='skill'>
-						<span class='chart' data-percent="20">
-							<span class='percent'>20</span>
-							<canvas height="152" width="152"></canvas>
-						</span>
-						<h4>jQuery</h4>
-						<p>Not there yet</p>
+						<h4>Vue.js</h4>
+						<p>Feeling quite confident</p>
 					</div>
 
 					<div class='skill'>
@@ -154,8 +127,35 @@
 							<span class='percent'>80</span>
 							<canvas height="152" width="152"></canvas>
 						</span>
+						<h4>CSS</h4>
+						<p>Feeling quite confident</p>
+					</div>
+
+					<div class='skill'>
+						<span class='chart' data-percent="70">
+							<span class='percent'>70</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>HTML5</h4>
+						<p>Feeling quite confident</p>
+					</div>
+
+					<div class='skill'>
+						<span class='chart' data-percent="60">
+							<span class='percent'>60</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>JavaScript</h4>
+						<p>Feeling confident, but so much to learn</p>
+					</div>
+
+					<div class='skill'>
+						<span class='chart' data-percent="60">
+							<span class='percent'>60</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
 						<h4>Illustrator</h4>
-						<p>No problem, let's play</p>
+						<p>Feeling it</p>
 					</div>
 
 					<div class='skill'>
@@ -168,30 +168,12 @@
 					</div>
 
 					<div class='skill'>
-						<span class='chart' data-percent="30">
-							<span class='percent'>30</span>
-							<canvas height="152" width="152"></canvas>
-						</span>
-						<h4>InDesign</h4>
-						<p>Haven't used so much</p>
-					</div>
-
-					<div class='skill'>
-						<span class='chart' data-percent="90">
-							<span class='percent'>90</span>
+						<span class='chart' data-percent="80">
+							<span class='percent'>80</span>
 							<canvas height="152" width="152"></canvas>
 						</span>
 						<h4>AutoCAD</h4>
-						<p>Feeling confident</p>
-					</div>
-
-					<div class='skill'>
-						<span class='chart' data-percent="20">
-							<span class='percent'>20</span>
-							<canvas height="152" width="152"></canvas>
-						</span>
-						<h4>C#</h4>
-						<p>By the end of September I'll know a lot more! :)</p>
+						<p>Feeling good</p>
 					</div>
 
 				</div>
@@ -216,7 +198,7 @@
 								<i class="far fa-user"></i>
 							</div>
 							<div class='squareContent'>
-								<h2 class='counter'>32</h2>
+								<h2 class='counter'>35</h2>
 								<h3>Wonderful years of life experience</h3>
 							</div>
 						</div>
@@ -324,7 +306,7 @@
 		<div class='container'>
 			<div class='row'>
 				<div class='col-md-10'>
-					<p>&copy; Copyright <span id='name'>Kristina Pihl</span> 2018</p>
+					<p>&copy; Copyright <span id='name'>Kristina Pihl</span> 2021</p>
 				</div>
 				<div class='col-md-2' id='arrow'>
 					<a id='scroll-top' href="#slides"><i class="fas fa-angle-up"></i></a>
